# fenicsx_pml

./: .gitignore  README.md  pyproject.toml
demos/: demo_helmholtz.py  utils.py
src/fenicsx_pml/: __init__.py  locallyconformal.py
test/: air.msh  pml.msh  polyhedron.msh  test_geometry.py  test_monopole.py  trapezoid.msh
test/fields/test.bp/: data.0  md.0  md.idx  profiling.json
test/fields/u.bp/: data.0  md.0  md.idx  profiling.json
test/fields/u_nopml.bp/: data.0  md.0  md.idx  profiling.json
